implement budget planning module